--- a/templates/Service-details.html
+++ b/templates/Service-details.html
@@ -17,6 +17,53 @@
 </head>
 
 <body>
+    <!-- navbar------------------------------------>
+    <header id="header">
+        <div class="logo-part">
+            <a href="index.html">
+                <img src="/static/media/saturian.png" alt="saturian logo" />
+                <h1>Saturian Global</h1>
+            </a>
+        </div>
+        <ul id="navbar" class="navbar">
+            <li class="link">
+                <a href="index.html" class="active">Home</a>
+            </li>
+            <li class="link">
+                <a href="About.html">About</a>
+            </li>
+            <li class="link" class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Products
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="Laptop.html">Laptop</a></li>
+                    <li><a class="dropdown-item" href="#">Apple</a></li>
+                    <li><a class="dropdown-item" href="#">Computers</a></li>
+                    <li><a class="dropdown-item" href="#">CCTV</a></li>
+                    <li><a class="dropdown-item" href="#">Printers</a></li>
+                    <li><a class="dropdown-item" href="#">Accessories</a></li>
+                    <li><a class="dropdown-item" href="#">All in One</a></li>
+                </ul>
+            <li class="link">
+                <a href="Service.html">Services</a>
+            </li>
+            <li class="link">
+                <a href="Contact.html">Contact us</a>
+            </li>
+            <a href="#" id="close" class="link">
+                <lord-icon src="https://cdn.lordicon.com/nqtddedc.json" trigger="hover" colors="primary:#FFD700"
+                    style="width:25px;height:25px">
+                </lord-icon>
+            </a>
+        </ul>
+        <div id="hamburger">
+            <lord-icon id="bar" src="https://cdn.lordicon.com/swcqkzdc.json" trigger="hover"
+                style="width:25px;height:25px" colors="primary:#FFD700">
+            </lord-icon>
+        </div>
+    </header>
 
     <!-- banner section---------------------------------- -->
     <section style="background: url(/static/media/service-details-banner.jpg) no-repeat center/cover fixed;"
@@ -36,26 +83,31 @@
         <div class="rental-services">
             <h1 class="mpt-5">Computer Rental Services</h1>
             <h2 class="mpt-5">Coorporate Rentals</h2>
-            <p class="mpt-5">A significant portion of the market is driven by corporate clients who rent computers for short-term
+            <p class="mpt-5">A significant portion of the market is driven by corporate clients who rent computers for
+                short-term
                 projects,
                 events, or to meet temporary needs.</p>
             <h2 class="mpt-5">Event Rentals</h2>
-            <p class="mpt-5">The event and conference sector accounts for a substantial share of computer rentals, particularly for
+            <p class="mpt-5">The event and conference sector accounts for a substantial share of computer rentals,
+                particularly for
                 trade
                 shows, conferences, and exhibitions.</p>
             <h1 class="mpt-5">Types of Computer Rented</h1>
             <h2 class="mpt-5">Laptops</h2>
-            <p class="mpt-5">Laptops are the most commonly rented computers due to their portability and versatility.</p>
+            <p class="mpt-5">Laptops are the most commonly rented computers due to their portability and versatility.
+            </p>
             <h2 class="mpt-5">Desktops</h2>
             <p class="mpt-5">Desktop computer rentals are popular for office setups and educational institutions.</p>
             <hr>
             <h1 class="mpt-5">Printer Accessories</h1>
             <h2 class="mpt-5">Ink Cartridges</h2>
-            <p class="mpt-5">These contain the ink used in inkjet printers and are available in various colors. Compatible and
+            <p class="mpt-5">These contain the ink used in inkjet printers and are available in various colors.
+                Compatible and
                 refillable
                 cartridges are also popular.</p>
             <h2 class="mpt-5">Toner Cartridges</h2>
-            <p class="mpt-5">Used in laser printers, these cartridges contain toner powder for high-quality text and image printing.
+            <p class="mpt-5">Used in laser printers, these cartridges contain toner powder for high-quality text and
+                image printing.
             </p>
             <h2 class="mpt-5">Printer Cables</h2>
             <p class="mpt-5">USB and other cables are necessary for connecting printers to computers.</p>
@@ -97,7 +149,8 @@
             <div class="service-details">
                 <h1 class="mpt-5">Service Overview</h1>
                 <h2 class="mpt-5">Unlock the Power of Technology with Saturian Global</h2>
-                <p class="mpt-5">At Saturian Global, we're your trusted partner in navigating the ever-evolving landscape of
+                <p class="mpt-5">At Saturian Global, we're your trusted partner in navigating the ever-evolving
+                    landscape of
                     technology.
                     Our comprehensive suite of IT services is designed to empower your business, streamline operations,
                     and
@@ -108,7 +161,8 @@
             <div class="service-details">
                 <h1 class="mpt-5">Network Solutions</h1>
                 <h2 class="mpt-5">Seamless Connectivity, Maximum Productivity</h2>
-                <p class="mpt-5">A well-designed network is the backbone of any modern business. Saturian Global specializes in
+                <p class="mpt-5">A well-designed network is the backbone of any modern business. Saturian Global
+                    specializes in
                     crafting
                     scalable and reliable network solutions. We ensure that your data flows smoothly, your communication
                     is
@@ -118,7 +172,8 @@
             <div class="service-details">
                 <h1 class="mpt-5"> Cybersecurity</h1>
                 <h2 class="mpt-5">Protecting What Matters Most</h2>
-                <p class="mpt-5">In an era of increasing cyber threats, safeguarding your digital assets is non-negotiable. Our
+                <p class="mpt-5">In an era of increasing cyber threats, safeguarding your digital assets is
+                    non-negotiable. Our
                     cybersecurity
                     experts implement robust measures to protect your data, systems, and reputation. With cutting-edge
                     solutions
@@ -128,7 +183,8 @@
             <div class="service-details">
                 <h1 class="mpt-5">IT Consulting</h1>
                 <h2 class="mpt-5">Your Strategic IT Partner</h2>
-                <p class="mpt-5">Confused about your IT roadmap? Our experienced consultants are here to guide you. We analyze your
+                <p class="mpt-5">Confused about your IT roadmap? Our experienced consultants are here to guide you. We
+                    analyze your
                     current
                     infrastructure, understand your goals, and provide tailored recommendations. Let us help you make
                     informed
@@ -138,7 +194,8 @@
             <div class="service-details">
                 <h1 class="mpt-5">24/7 Support</h1>
                 <h2 class="mpt-5">Reliable Support When You Need It</h2>
-                <p class="mpt-5">Technology doesn't sleep, and neither do we. Saturian Global offers round-the-clock IT support to
+                <p class="mpt-5">Technology doesn't sleep, and neither do we. Saturian Global offers round-the-clock IT
+                    support to
                     ensure
                     your business runs smoothly. From troubleshooting to system maintenance, our experts are just a call
                     away,
@@ -146,6 +203,97 @@
             </div>
         </div>
     </section>
+
+    <!-- footer----------------------------------------------------- -->
+    <footer class="footer flex-col">
+        <div class="footer-content-cotainer flex wd-page">
+            <div class="column-1 column-common flex-center-col">
+                <h1 class="mpt-5"><strong>About Company</strong></h1>
+                <ul>
+                    <li><a href="Services.html" class="flex">
+                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
+                                colors="primary:#FFD700" style="width:25px;height:25px">
+                            </lord-icon>
+                            <p class="mpt-5">Services</p>
+                        </a></li>
+                    <li><a href="About.html" class="flex">
+                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
+                                colors="primary:#FFD700" style="width:25px;height:25px">
+                            </lord-icon>
+                            <p class="mpt-5">About</p>
+                        </a></li>
+                    <li><a href="Contact.html" class="flex">
+                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
+                                colors="primary:#FFD700" style="width:25px;height:25px">
+                            </lord-icon>
+                            <p class="mpt-5">Contact Us</p>
+                        </a></li>
+                    <li><a href="https://www.globalsaturian.com" target="_blank" class="flex">
+                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
+                                colors="primary:#FFD700" style="width:25px;height:25px">
+                            </lord-icon>
+                            <p class="mpt-5">More With Saturian Global</p>
+                        </a></li>
+                </ul>
+            </div>
+            <div class="column-2 column-common my20 flex-center-col">
+                <h1 class="mpt-5"><strong>Explore More</strong></h1>
+                <ul>
+                    <li><a href="Service-details.html" class="flex">
+                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
+                                colors="primary:#FFD700" style="width:25px;height:25px">
+                            </lord-icon>
+                            <p class="mpt-5">PC For Rent</p>
+                        </a></li>
+                    <li><a href="Popular-services.html" class="flex">
+                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
+                                colors="primary:#FFD700" style="width:25px;height:25px">
+                            </lord-icon>
+                            <p class="mpt-5">Digital Marketing</p>
+                        </a></li>
+                    <li><a href="Popular-services.html" class="flex">
+                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
+                                colors="primary:#FFD700" style="width:25px;height:25px">
+                            </lord-icon>
+                            <p class="mpt-5">Product Engineering</p>
+                        </a></li>
+                    <li><a href="Service-details.html" class="flex">
+                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
+                                colors="primary:#FFD700" style="width:25px;height:25px">
+                            </lord-icon>
+                            <p class="mpt-5">Customize Your PC</p>
+                        </a></li>
+                </ul>
+            </div>
+            </section>
+            <div class="column-3 my20 column-common flex-center-col">
+                <ul>
+                    <p class="mpt-5">Mail Us Your Querries on</p>
+                    <li><a class="mpt-5" href="mailto:Info@Saturianglobal.com"
+                            target="_blank">Info@Saturianglobal.com</a></li>
+                    <li><a class="mpt-5" href="mailto:contact@Saturianglobal.com"
+                            target="_blank">Contact@Saturianglobal.com</a>
+                    </li>
+            </div>
+            <div class="column-4 my20 column-common flex-center-col">
+                <div class="column-4-img">
+                    <img src="/static/media/saturian.png" alt="saturian logo">
+                </div>
+                <div class="socialmedia flex wd-page">
+                    <a href="https://www.instagram.com/saturian_global?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i
+                            class="fab fa-instagram fa-lg"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61550589569176&mibextid=ZbWKwL" target="_blank"><i
+                            class="fab fa-facebook fa-lg"></i></a>
+                    <a href="http://www.linkedin.com/in/saturian-global-49889428a" target="_blank"><i
+                            class="fab fa-linkedin fa-lg"></i></a>
+                </div>
+            </div>
+            <!-- copyright section ----------------------->
+            <div class="copyright flex-center wd-page">
+                <h1 class="mpt-5">Copyright @2023 SATURIAN GLOBAL</h1>
+            </div>
+        </div>
+    </footer>
 
     <!-- go to top button--------------------------------------- -->
     <a href="#">
