--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -9,6 +9,7 @@
     height: auto;
     background: transparent;
     backdrop-filter: blur(5px);
+    background-color: #fffefe1a;
     border: solid 0.5px #DAA520;
     border-radius: 15px;
     box-shadow: 0px 1px 15px black;
