--- a/static/css/details.css
+++ b/static/css/details.css
@@ -71,7 +71,7 @@
 
 .modal-content {
     width: clamp(200px, 90vw, 450px);
-    background-color: rgba(255, 255, 255, 0.118);
+    background-color: #fffefe1a;
     backdrop-filter: blur(5px);
     padding: clamp(1rem, 100vw, 0rem);
     box-shadow: 0 0 .5em rgba(0, 0, 0, .5);
