--- a/static/css/utility.css
+++ b/static/css/utility.css
@@ -108,15 +108,13 @@ html {
 }
 
 .cursive {
-  font-family: "Water Brush", cursive;
-  font-weight: 400;
+  font-family: serif;  font-weight: 400;
   font-style: normal;
   font-size: 5rem;
 }
 
 .cursive2 {
-  font-family: "Water Brush", cursive;
-  font-weight: 400;
+  font-family: serif;  font-weight: 400;
   font-style: normal;
   font-size: 3rem;
 }
